--- a/_config.yml
+++ b/_config.yml
@@ -7,32 +7,47 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
+highlighter: rouge 
 
 
 ### content configuration ###
-title:       "SinglePaged - Title: Edit me in _config.yml!"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
-favicon:     #put a path like: "img/favicon.ico"
-touch_icon:  #put a path like: "img/apple-touch-icon.png"
-google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
+title: AoN Brainhack Warsaw 2017
+keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations,open science
+description: Satellite event for  Aspects of Neuroscience conference
+#source_link:
+#favicon:
+#touch_icon:
+#google_analytics_key:
 
 
 ### template colors, used site-wide via css ###
+### template colors, used site-wide via css ###
 colors:
+  white:        '#eaeaea'
+  intro:        '#428bca'
+  activities:   '#ed7950'
+  saturday-one: '#66b266'
+  monday:       '#5ea06e'
+  tuesday:      '#578e77'
+  wednesday:    '#4f7c80'
+  thursday:     '#486a89'
+  friday:       '#415992'
+  saturday-two: '#39479b'
+  contacts:     '#3035A4'
   black:     '#111111'
-  white:     '#f8f8f8'
+  white:     '#eee'
+  offwhite:  '#f8f8f8'
   blue:      '#49a7e9'
   green:     '#9bcf2f'
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
-
-kramdown:
-  auto_ids:  false
+  darkred:   '#940a3d'
+  limegreen: '#82940a'
+  softgreen: '#0a9461'
+  darkblue:  '#240563'
 
