--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: Satellite event for  Aspects of Neuroscience conference
 ### template colors, used site-wide via css ###
 colors:
   white:        '#eaeaea'
-  intro:        '#428bca'
+  intro:        '#428bca' 
   activities:   '#ed7950'
   saturday-one: '#66b266'
   monday:       '#5ea06e'
@@ -45,9 +45,13 @@ colors:
   green:     '#9bcf2f'
   purple:    '#c869bf'
   orange:    '#fab125'
-  turquoise: '#0fbfcf'
+#  turquoise: '#0fbfcf'
   darkred:   '#940a3d'
   limegreen: '#82940a'
   softgreen: '#0a9461'
   darkblue:  '#240563'
-
+  turquoise: '#1abc9c'
+  emerald   : '#2ecc71'
+  peteriver : '#3498db'
+  amethyst  : '#9b59b6'
+  wetasphalt : '#34495e'
