--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-highlighter: rouge 
+highlighter: pygments 
 
 
 ### content configuration ###
@@ -55,3 +55,9 @@ colors:
   peteriver : '#3498db'
   amethyst  : '#9b59b6'
   wetasphalt : '#34495e'
+
+kramdown:
+  auto_ids:  false
+
+sass:
+  sass_dir: stylesheets/_sass/
