--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ highlighter: rouge
 ### content configuration ###
 title: AoN Brainhack Warsaw 2017
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations,open science
-description: Satellite event for  Aspects of Neuroscience conference
+description: Satellite event for  Aspects of Neuroscience conference. The call for proposals for the AoN Brainhack Warsaw 2017 is now open!
 #source_link:
 favicon: img/favicon.ico
 #touch_icon:
