--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: Bring your ideas on open, reproducible neuroscience related project
 favicon: img/favicon.ico
 url: https://brainhackwarsaw.github.io
 #touch_icon:
-google_analytics_key: UA-104097157-1
+google_analytics_key: UA_104097157_1
 twitter_description: The call for proposals for the AoN Brainhack Warsaw 2017 is now open!
 
 
