--- a/_config.yml
+++ b/_config.yml
@@ -27,38 +27,17 @@ twitter_description: The call for proposals for the AoN Brainhack Warsaw 2017 is
 
 
 ### template colors, used site-wide via css ###
-### template colors, used site-wide via css ###
+
 colors:
-  white:        '#eaeaea'
-  intro:        '#428bca' 
-  activities:   '#ed7950'
-  saturday-one: '#66b266'
-  monday:       '#5ea06e'
-  tuesday:      '#578e77'
-  wednesday:    '#4f7c80'
-  thursday:     '#486a89'
-  friday:       '#415992'
-  saturday-two: '#39479b'
-  contacts:     '#3035A4'
-  black:     '#111111'
-  white:     '#eee'
-  offwhite:  '#f8f8f8'
-  blue:      '#49a7e9'
-  green:     '#9bcf2f'
-  purple:    '#c869bf'
-  orange:    '#fab125'
 
   aongreen: '#1C7439'
-#  turquoise: '#0fbfcf'
-  darkred:   '#940a3d'
-  limegreen: '#82940a'
-  softgreen: '#0a9461'
-  darkblue:  '#240563'
+### flat  design colors from https://www.materialui.co/flatuicolors
   turquoise: '#1abc9c'
   emerald   : '#2ecc71'
   peteriver : '#3498db'
   amethyst  : '#9b59b6'
   wetasphalt : '#34495e'
+### choose matarial design colors from http://materialuicolors.co/
 
 kramdown:
   auto_ids:  false
