--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: AoN Brainhack Warsaw 2017
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
 description: Bring your ideas on open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The call for proposals for is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
-favicon: favicon.png?
+#favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
 #touch_icon:
 google_analytics_key: UA-104097157-1
