--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,12 @@ colors:
   amethyst  : '#9b59b6'
   wetasphalt : '#34495e'
   red: '#F44336'
-
+  pink: '#ff80ab'
   cyan: '#1ba1e2'
   cobalt: '#0050ef'
+  blueibro: '#051d9b'
+  blueblue: '#2942C'
+  azul: '#1760E4'
 ### choose matarial design colors from http://materialuicolors.co/
 
 
