--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ timezone: null
 lsi: false
 markdown: kramdown
 highlighter: rouge
+baseurl
 
 
 ### content configuration ###
@@ -21,9 +22,10 @@ description: Participate in open, reproducible neuroscience related projects to 
 #source_link:
 #favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
+baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
-twitter_description: The registration for the AoN Brainhack Warsaw 2017 is now open!
+twitter_description: The registration for projects for the AoN Brainhack Warsaw 2019 is will be open soon!
 
 
 ### template colors, used site-wide via css ###
@@ -53,3 +55,5 @@ kramdown:
 
 sass:
   sass_dir: stylesheets/_sass/
+  
+theme: jekyll-theme-merlot
