--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: null
 lsi: false
 markdown: kramdown
 highlighter: rouge
-#baseurl
+baseurl
 
 
 ### content configuration ###
@@ -21,8 +21,8 @@ keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, mo
 description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
-url: "https://brainhackwarsaw.github.io"
-#baseurl: /brainhackwarsaw
+url: https://brainhackwarsaw.github.io
+baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
 twitter_description: The registration for projects for the AoN Brainhack Warsaw 2019 is will be open soon!
@@ -56,4 +56,4 @@ kramdown:
 sass:
   sass_dir: stylesheets/_sass/
 
-theme: jekyll-theme-merlot
+#theme: jekyll-theme-merlot
