--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, mo
 description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
-url: https://brainhackwarsaw.github.io
+url: "https://brainhackwarsaw.github.io"
 #baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
