--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+---
+
 port: 4000
 host: 0.0.0.0
 safe: false
@@ -14,12 +16,12 @@ highlighter: rouge
 
 
 ### content configuration ###
-title: AoN Brainhack Warsaw 2017
+title: AoN Brainhack Warsaw 2019
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
-description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
+description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2019! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
-url: "https://brainhackwarsaw.github.io"
+url: https://brainhackwarsaw.github.io
 #baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
@@ -54,4 +56,4 @@ kramdown:
 sass:
   sass_dir: stylesheets/_sass/
 
-theme: jekyll-theme-merlot
+#theme: jekyll-theme-merlot
