--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,17 @@ timezone: null
 lsi: false
 markdown: kramdown
 highlighter: rouge
-#baseurl
+baseurl
 
 
 ### content configuration ###
-title: AoN Brainhack Warsaw 2019
+title: AoN Brainhack Warsaw 2017
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
-description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2019! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
+description: Participate in open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The  registration is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
-#baseurl: /brainhackwarsaw
+baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
 twitter_description: The registration for projects for the AoN Brainhack Warsaw 2019 is will be open soon!
