--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ highlighter: rouge
 ### content configuration ###
 title: AoN Brainhack Warsaw 2019
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
-description: Bring your ideas on open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2017! The call for proposals for is now open! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
+description: Bring your ideas on open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2019! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
