--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ highlighter: rouge
 ### content configuration ###
 title: Brainhack Warsaw 2019
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
-description: Bring your ideas on open, reproducible neuroscience related projects to AoN Brainhack Warsaw 2019! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
+description: Bring your ideas on open, reproducible neuroscience related projects to Brainhack Warsaw 2019! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
 #source_link:
 #favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
 #baseurl: /brainhackwarsaw
 #touch_icon:
 google_analytics_key: UA-104097157-1
-twitter_description: The call for proposals for the AoN Brainhack Warsaw 2019 is now open!
+twitter_description: The call for proposals for the Brainhack Warsaw 2019 is now open!
 
 
 ### template colors, used site-wide via css ###
