Updt colors + experimental manifesto

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ colors:
   amethyst  : '#9b59b6'
   wetasphalt : '#34495e'
   red: '#ffc107'
+  fuchsia: '#b20077'
 
   cyan: '#1ba1e2'
   cobalt: '#355068'
