Updt colors + change pages order + minor fix

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ colors:
   aongreen: '#1C7439'
   white:     '#eee'
 ### flat  design colors from https://www.materialui.co/flatuicolors
-  turquoise: '#1ea8a1'
+  turquoise: '#0f9e9e'
   emerald   : '#208c32'
   peteriver : '#3498db'
   amethyst  : '#9b59b6'
