--- a/_config.yml
+++ b/_config.yml
@@ -41,12 +41,12 @@ colors:
   turquoise_: '#0f9e9e'
   emerald   : '#208c32'
   peteriver : '#3498db'
-  amethyst  : '#9b59b6'
+  amethyst  : '#9215a5'
   wetasphalt : '#34495e'
   red: '#ffc107'
   fuchsia: '#b20077'
 
-  cyan: '#1ba1e2'
+  cyan: '#2f8dbc'
   cobalt: '#355068'
 ### choose matarial design colors from http://materialuicolors.co/
 
