--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ colors:
   light_green: '#c0fff0'
   fuchsia: '#b12a78' #'#b20077'
 
-  cyan: '#2f8dd0' #'#2f8dbc'
+  cyan: '#24a7ea' #'#2f8dbc'
   cobalt: '#495eac' #'#355068'
 ### choose matarial design colors from http://materialuicolors.co/
 
