--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ colors:
   white:     '#eee'
 ### flat  design colors from https://www.materialui.co/flatuicolors
   turquoise_: '#05a7a1' #'#0f9e9e'
-  emerald   : '#2ecc71'
+  emerald   : '#1adb78'
   peteriver : '#3498db'
   amethyst  : '#6d68c6' #'#9215a5'
   wetasphalt : '#34495e'
