--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ colors:
   turquoise_: '#05a7a1' #'#0f9e9e'
   emerald   : '#1ac182'
   peteriver : '#3498db'
-  amethyst  : '#6d68c6' #'#9215a5'
+  amethyst  : '#9768c6' #'#9215a5'
   wetasphalt : '#34495e'
   red: '#ff1f3e' #'#ffc107'
   light_green: '#c0fff0'
