--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ highlighter: rouge
 
 
 ### content configuration ###
-title: Brainhack Warsaw 2019
+title: Brainhack Warsaw 2020
 keywords: brainhack, hackaton, neuroscience, warsaw, cognitive science, fMRI, modelling, simulations, open science
-description: Bring your ideas on open, reproducible neuroscience related projects to Brainhack Warsaw 2019! Brainhack Warsaw is an official satellite event for Aspects of Neuroscience conference.
+description: Bring your ideas on open, reproducible neuroscience related projects to Brainhack Warsaw 2020!
 #source_link:
 #favicon: favicon.png?
 url: https://brainhackwarsaw.github.io
