Page contributors edit

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ colors:
   light_purple: '#CE93D8'
   light_pink: '#F48FB1'
   light_blue: '#90CAF9'
-  light_amber: '#B39DDB'
+  light_amber: '#FFE082'
   light_deep_purple: '#B39DDB'
   light_grey: '#B0BEC5'
 
